# aether

./: .editorconfig  .gitattributes  .gitignore  CONTRIBUTING.md  DEVELOPERS.md  Makefile  README.md  docker-compose.yml  dockerfile  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
aether/: __init__.py  cli.py
aether/aether/: __version__.py
aether/aether/utils/: __init__.py  hash_utils.py
aether/utils/: __init__.py  config.py  file_utils.py  hash_utils.py  logging.py  profiling.py  text_utils.py
docs/: README.md
docs/guides/: configuration.md  extending.md  installation.md  quickstart.md
research/: aether.ipynb  conplag_data_preprocess.py  ir_plag_labels.csv  preprocess_ir_plag.py
research/labels/: conplag_labels.csv  ir_plag_labels.csv
research/notebooks/: aether.ipynb  ast.ipynb  cosine_similarity.ipynb  history.csv  simple_classifier.ipynb  simple_classifier_fine_tuning.ipynb  token_types.py
research/notebooks/archive/codeberta-small-v1/: codeberta-small-v1.ipynb
research/notebooks/ast/: .xml  ast.ipynb  ast_to_xml.ipynb
research/notebooks/codeberta-small-v1/: codeberta-small-v1.ipynb  cosine_similarity.ipynb  simple_classifier.ipynb  simple_classifier_fine_tuning.ipynb
research/notebooks/cosine_similarity/: cosine_similarity.ipynb  similarity.csv
research/notebooks/microsoft-codebert/: microsoft-codebert.ipynb
research/scripts/: preprocess_conplag_data.py  preprocess_ir_plag.py
scripts/: code_structure.sh  init_project.sh
tests/: conftest.py  test_basic.py
tests/utils/: test_file_utils.py
