[build-system]
requires = ["setuptools>=65.0.0", "wheel>=0.37.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aether"
version = "0.1.0"
description = "Advanced source code similarity detection system"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Carlos Rodrigo Salguero Alc치ntara", email = "a00833341@tec.mx"},
    {name = "Daniel Sebasti치n Cajas Morales", email = "a01708637@tec.mx"},
    {name = "Sergio Garnica Gonz치lez", email = "a01704025@tec.mx"},
]
maintainers = [
    {name = "Carlos Rodrigo Salguero Alc치ntara", email = "a00833341@tec.mx"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "numpy>=1.24.0",
    "scikit-learn>=1.2.2",
    "torch>=2.0.0",
    "tree-sitter>=0.20.1",
    "matplotlib>=3.7.1",
    "networkx>=3.1",
    "click>=8.1.3",
    "tqdm>=4.65.0",
    "pygments>=2.15.1",
    "jinja2>=3.1.2",
    "transformers>=4.29.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.3.0",
    "isort>=5.12.0",
    "mypy>=1.3.0",
    "pytest>=7.3.1",
    "pytest-cov>=4.1.0",
    "ruff>=0.0.270",
    "pre-commit>=3.3.2",
    "build>=0.10.0",
]
ml = [
    "transformers>=4.29.0",
    "torch>=2.0.0",
]
fasttext = [
    "fasttext>=0.9.2",
]
viz = [
    "matplotlib>=3.7.1",
    "networkx>=3.1",
    "seaborn>=0.12.2",
]
all = [
    "aether[dev,ml,viz,fasttext]"
]

[project.scripts]
aether = "aether.cli:main"

[project.urls]
"Homepage" = "https://github.com/salgue441/aether"
"Bug Tracker" = "https://github.com/salgue441/aether/issues"

[tool.setuptools]
packages = ["aether"]

[tool.black]
line-length = 88
target-version = ["py310"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--cov=aether --cov-report=term-missing --cov-report=xml"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 88
select = ["E", "F", "B", "I", "W", "C90"]
ignore = ["E203"]
exclude = [
    ".git",
    ".eggs",
    "__pycache__",
    "build",
    "dist",
    "venv",
    "env",
]

[tool.ruff.mccabe]
max-complexity = 10

[tool.aether]
# Detection settings
threshold = 0.75
ignore_comments = true
consider_variable_names = false
min_token_length = 3

# Machine learning model settings
use_ml_model = true
model_path = "models/similarity_model.pkl"
embedding_dim = 128

# AST analysis settings
use_ast = true
normalize_identifiers = true
consider_structure_only = false

# Output settings
output_format = "html"
include_snippets = true
include_metrics = true

# Languages to support
languages = [
    "python",
    "java",
    "cpp",
]
